--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 INSTAGRAM_ACCESS_TOKEN=your_access_token
 INSTAGRAM_ACCOUNT_ID=your_account_id
-DOMAIN_URL=your_domain_url 
+BASE_URL=http://example.com
